# llvm-ir-cmake-utils

example04/src/: CMakeLists.txt  foo.cpp
example04/src/lib/: CMakeLists.txt  bar.cpp
example05/src/: foo.cpp
example05/src/include/: bar.hpp
example05/src/lib/: CMakeLists.txt
example05/src/lib/bar/: CMakeLists.txt  bar.cpp
example05/src/lib/baz/: CMakeLists.txt  baz.cpp
